--- a/index.html
+++ b/index.html
@@ -39,12 +39,11 @@
         <section id="inicio" class="my-5">
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
-                    <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
-                    <img src="img/logo-2.png" class="mb-3" width="563"
+                    <h1 class="display-4 text-white fst-italic fw-bold">Seja bem vindo a</h1>
+                    <img src="img/letras-removebg-preview.png" class="mb-3" width="563"
                         height="278" loading="lazy">
-                    <a href="#tropicalia"
-                        class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
-                        conhecer!</a>
+                    <a href="#tropicália"
+                        class="btn btn-primary btn-lg botao-inicio fw-semibold">Ir para a loja!</a>
                 </div>
                 <img src="img/" alt="" title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
 
